# ocaml-arrow

./: .gitignore  README.md  arrow.opam  dune-project
examples/: dune  print_record_batch.ml  util.py  write_back_record_batch.ml  write_record_batch_to_file.ml
lib/: dune
lib/array/: array_intf.ml  boolean_array.ml  dune  generic_byte_array.ml  generic_list_array.ml  primitive_array.ml  record_batch.ml  struct_array.ml
lib/buffer/: bit_util.ml  boolean_buffer.ml  buffer.ml  byte_slice.ml  dune  native_type.ml  null_buffer.ml  offset_buffer.ml  scalar_buffer.ml
lib/data/: array_data.ml  dune
lib/ipc/: dune  reader.ml  writer.ml
lib/schema/: arrow_primitive_types.ml  datatype.ml  dune  field.ml  schema.ml
test/: dune  test_arrow.ml
